correcao fas fotos

--- a/src/app/new/new.page.html
+++ b/src/app/new/new.page.html
@@ -18,7 +18,7 @@
     <ion-row>
       <ion-col>
           <ion-avatar>
-            <img name="campofoto" src="foto" (click)="escolherFoto()">
+            <img #avatarimg name="campofoto" [src]="foto" (click)="escolherFoto()">
           </ion-avatar>
       </ion-col>
     </ion-row>
