--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -13,19 +13,19 @@
 </ion-header>
 <ion-content>
 
-  <ion-refresher slot="fixed" (ionRefresh)="refresh($event)">
+  <ion-refresher slot="fixed" (ionRefresh)="atualiza($event)">
       <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
 
-  <ion-searchbar [(ngModel)]="terms"></ion-searchbar>
+  <ion-searchbar (ionInput)="getItems($event)" [(ngModel)]="filtro"></ion-searchbar>
 
   <ion-list>
-    <ion-item *ngFor="let professor of lista" (click)="showProfessorDetails(professor)" >
+    <ion-item *ngFor="let professor of lista" (click)="alteraProfessor(professor)" >
       {{professor.nome}}
     </ion-item>
   </ion-list>
 
-  <ion-infinite-scroll (ionInfinite)="loadProfessorDataFromDB($event)">
+  <ion-infinite-scroll (ionInfinite)="carregaFromInfinite($event)">
     <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Carregando..."></ion-infinite-scroll-content>
   </ion-infinite-scroll>
     
