--- a/src/app/new/new.page.html
+++ b/src/app/new/new.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <ion-icon slot="icon-only" name="arrow-back" (click)="voltar()"></ion-icon>
     </ion-buttons>
     <ion-title>
       {{titulo}}
